<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#CB000000">

    <TextView
        android:id="@+id/edit_operation"
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent=".90"
        android:layout_height="0dp"
        android:textColor="@color/black"
        android:background="#D4DEE1"
        app:layout_constraintHeight_percent=".10"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="20sp"
        android:textStyle="bold"

        app:cardCornerRadius="@dimen/_8sdp"
        />



    <TextView
        android:id="@+id/btn_bin_res"
        android:textColor="@color/white"

        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.4"

        app:layout_constraintHeight_percent=".05"
        app:layout_constraintStart_toStartOf="@id/btn_bin"
        app:layout_constraintTop_toBottomOf="@id/btn_bin"

        />
    <TextView
        android:id="@+id/btn_dec_res"
        android:textColor="@color/white"

        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.4"
        app:layout_constraintHeight_percent=".05"
        app:layout_constraintStart_toStartOf="@id/btn_dic"
        app:layout_constraintTop_toBottomOf="@id/btn_dic"

        />
    <TextView
        android:id="@+id/btn_octal_res"
        android:textColor="@color/white"

        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.4"
        app:layout_constraintHeight_percent=".05"
        app:layout_constraintStart_toStartOf="@id/btn_octal"
        app:layout_constraintTop_toBottomOf="@id/btn_octal"

        /><TextView
    android:id="@+id/btn_hex_res"
    android:textColor="@color/white"

    android:layout_width="0dp"
    android:layout_height="0dp"
    app:layout_constraintWidth_percent="0.4"
    app:layout_constraintHeight_percent=".05"
    app:layout_constraintStart_toStartOf="@id/btn_hex"
    app:layout_constraintTop_toBottomOf="@id/btn_hex"

    />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_bin"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.4"
        app:layout_constraintHeight_percent=".06"
        app:cornerRadius="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_26sdp"

        app:layout_constraintTop_toBottomOf="@id/edit_operation"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="32dp"
        android:text="bin"

        android:textSize="13sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:backgroundTint="@color/baby_blue"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_dic"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/_12sdp"
        app:layout_constraintWidth_percent="0.4"
        app:layout_constraintHeight_percent=".06"
        app:cornerRadius="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_26sdp"

        app:layout_constraintStart_toEndOf="@+id/btn_bin"
        app:layout_constraintTop_toBottomOf="@+id/edit_operation"
        android:text="dec"
        android:textSize="13sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:backgroundTint="@color/baby_blue"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_octal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.4"
        app:layout_constraintHeight_percent=".06"

        app:cornerRadius="@dimen/_50sdp"
        app:layout_constraintStart_toStartOf="@+id/btn_bin_res"
        app:layout_constraintTop_toBottomOf="@+id/btn_bin_res"
        android:text="octal"
        android:textSize="11sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:backgroundTint="@color/baby_blue"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_hex"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.4"
        app:layout_constraintHeight_percent=".06"

        app:cornerRadius="@dimen/_50sdp"
        app:layout_constraintStart_toStartOf="@+id/btn_dic"
        app:layout_constraintTop_toBottomOf="@+id/btn_dec_res"
        android:text="hex"
        android:textSize="13sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:backgroundTint="@color/baby_blue"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_a"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.18"
        app:layout_constraintHeight_percent=".1"
        app:cornerRadius="@dimen/_50sdp"

        app:layout_constraintTop_toBottomOf="@id/btn_octal_res"
        app:layout_constraintStart_toStartOf="parent"
        android:text="a"

        android:textAllCaps="false"

        android:layout_marginStart="@dimen/_24sdp"

        android:textSize="30sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:backgroundTint="@color/gray"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_num1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.18"
        app:layout_constraintHeight_percent=".1"
        app:cornerRadius="@dimen/_50sdp"
        android:layout_marginStart="@dimen/_13sdp"

        app:layout_constraintTop_toBottomOf="@id/btn_octal_res"
        app:layout_constraintStart_toEndOf="@id/btn_a"
        android:text="@string/_1"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:backgroundTint="@color/gray"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_num2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/_13sdp"
        app:layout_constraintWidth_percent="0.18"
        app:layout_constraintHeight_percent=".1"
        app:cornerRadius="@dimen/_50sdp"

        app:layout_constraintStart_toEndOf="@+id/btn_num1"
        app:layout_constraintTop_toBottomOf="@+id/btn_octal_res"
        android:text="@string/_2"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:backgroundTint="@color/gray"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_num3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/_13sdp"
        app:layout_constraintWidth_percent="0.18"
        app:layout_constraintHeight_percent=".1"
        app:cornerRadius="@dimen/_50sdp"

        app:layout_constraintStart_toEndOf="@+id/btn_num2"
        app:layout_constraintTop_toBottomOf="@+id/btn_octal_res"
        android:text="@string/_3"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:backgroundTint="@color/gray"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_b"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.18"
        app:layout_constraintHeight_percent=".1"
        app:cornerRadius="@dimen/_50sdp"
        app:layout_constraintStart_toStartOf="@id/btn_a"
        app:layout_constraintTop_toBottomOf="@+id/btn_num1"
        android:text="b"
        android:textAllCaps="false"

        android:textSize="30sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:backgroundTint="@color/gray"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_num4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.18"
        app:layout_constraintHeight_percent=".1"
        app:cornerRadius="@dimen/_50sdp"
        app:layout_constraintStart_toEndOf="@id/btn_b"
        app:layout_constraintTop_toBottomOf="@+id/btn_num1"
        android:text="@string/_4"
        android:textSize="30sp"
        android:layout_marginStart="@dimen/_13sdp"

        android:textColor="@color/black"
        android:textStyle="bold"
        android:backgroundTint="@color/gray"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_num5"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:layout_marginStart="@dimen/_13sdp"
        app:layout_constraintWidth_percent="0.18"
        app:layout_constraintHeight_percent=".1"
        app:cornerRadius="@dimen/_50sdp"
        app:layout_constraintStart_toEndOf="@+id/btn_num4"
        app:layout_constraintTop_toBottomOf="@+id/btn_num2"
        android:text="@string/_5"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:backgroundTint="@color/gray"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_num6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/_13sdp"
        android:backgroundTint="@color/gray"
        android:text="@string/_6"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintWidth_percent="0.18"
        app:layout_constraintHeight_percent=".1"
        app:cornerRadius="@dimen/_50sdp"
        app:layout_constraintStart_toEndOf="@+id/btn_num5"
        app:layout_constraintTop_toBottomOf="@+id/btn_num2"
        />



    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_c"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.18"
        app:layout_constraintHeight_percent=".1"
        app:cornerRadius="@dimen/_50sdp"
        app:layout_constraintStart_toStartOf="@id/btn_a"
        app:layout_constraintTop_toBottomOf="@+id/btn_num4"
        android:text="c"
        android:textSize="30sp"
        android:textAllCaps="false"

        android:textColor="@color/black"
        android:textStyle="bold"
        android:backgroundTint="@color/gray"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_num7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/_13sdp"
        app:layout_constraintWidth_percent="0.18"
        app:layout_constraintHeight_percent=".1"
        app:cornerRadius="@dimen/_50sdp"
        app:layout_constraintStart_toEndOf="@id/btn_c"
        app:layout_constraintTop_toBottomOf="@+id/btn_num4"
        android:text="@string/_7"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:backgroundTint="@color/gray"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_num8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/_13sdp"
        app:layout_constraintStart_toEndOf="@+id/btn_num7"
        app:layout_constraintTop_toBottomOf="@+id/btn_num4"
        app:layout_constraintWidth_percent="0.18"
        app:layout_constraintHeight_percent=".1"
        app:cornerRadius="@dimen/_50sdp"
        android:text="@string/_8"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:backgroundTint="@color/gray"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_num9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/_13sdp"
        app:layout_constraintStart_toEndOf="@+id/btn_num8"
        app:layout_constraintTop_toBottomOf="@+id/btn_num4"
        app:layout_constraintWidth_percent="0.18"
        app:layout_constraintHeight_percent=".1"
        app:cornerRadius="@dimen/_50sdp"
        android:text="@string/_9"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:backgroundTint="@color/gray"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_d"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.18"
        app:layout_constraintHeight_percent=".1"
        app:cornerRadius="@dimen/_50sdp"
        app:layout_constraintStart_toStartOf="@id/btn_a"
        app:layout_constraintTop_toBottomOf="@+id/btn_num7"
        android:text="d"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textAllCaps="false"


        android:textStyle="bold"
        android:backgroundTint="@color/gray"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_equal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.18"
        app:layout_constraintHeight_percent=".2"
        app:cornerRadius="@dimen/_50sdp"
        android:layout_marginStart="@dimen/_13sdp"

        app:layout_constraintStart_toEndOf="@id/btn_dott"
        app:layout_constraintTop_toBottomOf="@+id/btn_num9"
        android:text="="
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:backgroundTint="@color/lightpink"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_dott"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/_13sdp"
        app:layout_constraintWidth_percent="0.18"
        app:layout_constraintHeight_percent=".1"
        app:cornerRadius="@dimen/_50sdp"
        android:textAllCaps="false"
        app:layout_constraintStart_toEndOf="@id/btn_0"
        app:layout_constraintTop_toBottomOf="@+id/btn_num7"
        android:text="."
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:backgroundTint="@color/gray"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_e"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_d"
        app:layout_constraintWidth_percent="0.18"
        app:layout_constraintHeight_percent=".1"
        app:cornerRadius="@dimen/_50sdp"
        android:textAllCaps="false"
        android:text="e"
        app:layout_constraintStart_toStartOf="@id/btn_d"
        android:textSize="30sp"
        android:textColor="@color/black"

        android:textStyle="bold"
        android:backgroundTint="@color/gray"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_0"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/_13sdp"
        app:layout_constraintStart_toEndOf="@+id/btn_e"
        app:layout_constraintTop_toBottomOf="@+id/btn_num7"
        app:layout_constraintWidth_percent="0.18"
        app:layout_constraintHeight_percent=".1"
        app:cornerRadius="@dimen/_50sdp"
        android:text="0"
        android:textAllCaps="false"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:backgroundTint="@color/gray"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_f"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_d"
        app:layout_constraintWidth_percent="0.18"
        app:layout_constraintHeight_percent=".1"
        app:cornerRadius="@dimen/_50sdp"
        android:textAllCaps="false"
        android:text="f"
        app:layout_constraintStart_toEndOf="@id/btn_e"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:layout_marginStart="@dimen/_13sdp"

        android:textStyle="bold"
        android:backgroundTint="@color/gray"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_clear"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_d"
        app:layout_constraintWidth_percent="0.18"
        app:layout_constraintHeight_percent=".1"
        app:cornerRadius="@dimen/_50sdp"
        android:textAllCaps="false"
        android:text="cl"
        app:layout_constraintStart_toEndOf="@id/btn_f"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:layout_marginStart="@dimen/_13sdp"

        android:textStyle="bold"
        android:backgroundTint="@color/gray"/>
</androidx.constraintlayout.widget.ConstraintLayout>